Issue #11976 Jetty 12.1.x simplify poms (#13052)
* Issue #11976 Simplify poms by removing duplication and double interpolation

---------

Signed-off-by: Olivier Lamy <olamy@apache.org>